--- a/app/export/index.html
+++ b/app/export/index.html
@@ -50,7 +50,7 @@
 			<div class="after_export hidden">
 				<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 mt-20 mb-20">
 					<h2 class="pt-5">Save exported codes</h2>
-					<h3>Save your exported codes to use it elsewhere.</h3>
+					<h3>Save your exported 2FA codes to use it elsewhere.</h3>
 					<div class="flex flex-row justify-center gap-3 flex-wrap">
 						<div>
 							<button class="buttoni" id="but1" onclick="newSaveFile()">
