--- a/app/edit/index.html
+++ b/app/edit/index.html
@@ -48,13 +48,13 @@
 			</div>
 			<!-- load codes -->
 			<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 mb-20 mt-20 beforeLoad">
-				<h2 id="rollbackBut" class="pt-5">Load saved code(s)</h2>
-				<h3>You can load the codes you saved. After that you can edit or delete them and you can add more codes.</h3>
+				<h2 id="rollbackBut" class="pt-5">Load saved codes</h2>
+				<h3>You can load the 2FA codes you saved. After that you can edit or delete them and you can add more codes.</h3>
 				<button class="buttoni mb-5" onclick="loadCodes()">
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 7a2 2 0 012 2m4 0a6 6 0 01-7.743 5.743L11 17H9v2H7v2H4a1 1 0 01-1-1v-2.586a1 1 0 01.293-.707l5.964-5.964A6 6 0 1121 9z" />
 					</svg>
-					Load code(s)
+					Load codes
 				</button>
 			</div>
 			<!-- save codes and add codes -->
@@ -67,14 +67,14 @@
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
 							</svg>
-							Save modification(s)
+							Save modifications
 						</button>
 
 						<button class="buttoni" onclick="addCodes()">
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 13h6m-3-3v6m5 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
 							</svg>
-							Add code(s)
+							Add codes
 						</button>
 					</div>
 					<div class="mx-auto pb-5">
