--- a/app/export/index.html
+++ b/app/export/index.html
@@ -24,7 +24,7 @@
 		<div class="mx-auto rounded-2xl bg-gray-700 w-3/5 mt-40 text-center">
 			<img src="../../img/header.png" class="h-16 w-16 relative top-5" />
 			<h2>Export</h2>
-			<h4>You can export the codes you saved.</h4>
+			<h4>You can export the 2FA codes you saved.</h4>
 			<button class="buttoni mb-6" onclick="hide()">
 				<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
@@ -37,8 +37,8 @@
 		<div class="bg-gray-700 w-3/5 m-auto mt-20 mb-60 rounded-2xl relative text-center p-1">
 			<!-- before export -->
 			<div class="before_export mx-auto rounded-2xl bg-gray-800 w-2/3 mt-20 mb-20">
-				<h2 class="pt-5">Export codes</h2>
-				<h3>If you saved your codes you can export the secrets and the saved QR codes.</h3>
+				<h3 class="pt-5">Export codes</h3>
+				<h4>If you saved your codes you can export the secrets and the saved QR codes.</h4>
 				<button class="buttoni but1 mb-5" id="but0" onclick="exportCodes()">
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 16V4m0 0L3 8m4-4l4 4m6 0v12m0 0l4-4m-4 4l-4-4" />
@@ -49,8 +49,8 @@
 			<!-- after export -->
 			<div class="after_export hidden">
 				<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 mt-20 mb-20">
-					<h2 class="pt-5">Save exported codes</h2>
-					<h3>Save your exported 2FA codes to use it elsewhere.</h3>
+					<h3 class="pt-5">Save exported codes</h3>
+					<h4>Save your exported 2FA codes to use it elsewhere.</h4>
 					<div class="flex flex-row justify-center gap-3 flex-wrap">
 						<div>
 							<button class="buttoni" id="but1" onclick="newSaveFile()">
@@ -59,7 +59,7 @@
 								</svg>
 								Export .authme file
 							</button>
-							<h5 class="m-3">Ideal to import for Authme or for Authme Web.</h5>
+							<h5 class="m-3">Ideal to import for Authme or other Authme apps.</h5>
 						</div>
 						<div>
 							<button class="buttoni" id="but2" onclick="saveQrCodes()">
@@ -68,7 +68,7 @@
 								</svg>
 								Export .html file
 							</button>
-							<h5 class="m-3">Ideal for scanning QR codes or for security backup.</h5>
+							<h5 class="m-3">Ideal for scanning the QR codes or for security backup.</h5>
 						</div>
 					</div>
 
@@ -83,7 +83,7 @@
 									</svg>
 									Export .txt file
 								</button>
-								<h5 class="m-3">The old way to import for Authme or for Authme Web.</h5>
+								<h5 class="m-3">The old way to import for Authme or other Authme apps.</h5>
 							</div>
 						</details>
 					</div>
