--- a/app/landing/index.html
+++ b/app/landing/index.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<!-- meta -->
+		<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'" />
 		<meta charset="UTF-8" />
-		<title>Authme</title>
 		<!-- css -->
-		<link rel="stylesheet" href="../.././src/dragonfly.css" />
+		<link rel="stylesheet" href="../.././src/global.css" />
 		<link rel="stylesheet" href="../../src/tailwind.css" />
-		<link rel="stylesheet" href="./src/css/index.css" />
 		<!-- js -->
 		<script defer src="./src/js/index.js"></script>
-		<!-- favicon -->
-		<link rel="shortcut icon" href="../../img/icon.ico" type="image/x-icon" />
 	</head>
 	<body>
 		<!-- build number -->
-		<div class="w-full text-white bg-black font-bold build">
-			<div class="container flex flex-row items-center justify-center px-6 py-2 mx-auto">
+		<div class="w-full text-white bg-black font-bold build hidden z-10 top-0 sticky">
+			<div class="container flex flex-row items-center justify-center py-2 mx-auto">
 				<div class="flex">
-					<p class="mx-3 flex flex-row build-content">You are running a pre release version of Authme!</p>
+					<h5 class="mx-3 flex flex-row m-0 font-bold build-content text-center">You are running a pre release version of Authme!</h5>
 				</div>
 			</div>
 		</div>
 
 		<!-- content -->
-		<div class="bg-gray-700 w-3/5 m-auto mt-40 mb-60 rounded-2xl relative text-center">
+		<div class="bg-gray-700 w-3/5 m-auto mt-40 mb-60 rounded-2xl relative text-center p-1">
 			<h1>Authme</h1>
 			<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 mb-16" id="choose">
 				<h3 class="pt-3">Welcome to Authme!</h3>
@@ -64,8 +62,8 @@
 				</button>
 
 				<div class="mx-auto pb-3">
-					<details class="mb-5 transform ease-in duration-200" onclick="showMoreOptions()">
-						<summary class="font-bold mb-3 cursor-pointer">More options</summary>
+					<details class="details mb-5 transform ease-in duration-200" onclick="showMoreOptions()">
+						<summary class="summary font-bold mb-3 cursor-pointer">More options</summary>
 					</details>
 				</div>
 			</div>
@@ -79,28 +77,15 @@
 						</svg>
 						Confirm
 					</button>
-
 					<hr />
-
-					<h3>Backup key</h3>
-					<h4>In case you forget your password you can use this backup key to get back your codes.</h4>
-					<button onclick="generateBackupKey()" class="buttoni mb-7">
-						<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 7a2 2 0 012 2m4 0a6 6 0 01-7.743 5.743L11 17H9v2H7v2H4a1 1 0 01-1-1v-2.586a1 1 0 01.293-.707l5.964-5.964A6 6 0 1121 9z" />
-						</svg>
-						Generate key
-					</button>
-
-					<hr />
-
-					<h3>Use new encryption method</h3>
-					<h4>A new more secure encryption method for your codes (Default after 2.7.0).</h4>
+					<h3>Window capture</h3>
+					<h4>Allows screenshots and screen capture. You can record or screenshot the app until you restart Authme.</h4>
 					<div class="flex justify-center items-center w-72 h-[68px] bg-white mx-auto rounded-full">
 						<div class="relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
-							<input checked onclick="encryptionMethodToggle()" id="tgl0" type="checkbox" class="toggle checked:bg-white outline-none focus:outline-none right-5 duration-200 ease-in absolute block w-4 h-4 rounded-full top-1 bg-black appearance-none cursor-pointer" />
+							<input onclick="toggleWindowCapture()" id="tgl0" type="checkbox" class="toggle checked:bg-white outline-none focus:outline-none right-5 duration-200 ease-in absolute block w-4 h-4 rounded-full top-1 bg-black appearance-none cursor-pointer" />
 							<label for="tgl0" class="toggle-bg block overflow-hidden h-6 rounded-full bg-white cursor-pointer"></label>
 						</div>
-						<span id="tgt0" class="text-black text-xl">On</span>
+						<span id="tgt0" class="text-black text-xl">Off</span>
 					</div>
 				</div>
 			</div>
