Settings better wording

--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -214,7 +214,7 @@
 								<span id="tgt1" class="text-black text-xl">-</span>
 							</div>
 							<hr />
-							<div id="disable_screen_capture_div">
+							<div class="windowCapture">
 								<h3>Window capture</h3>
 								<h4>Allows screenshots and screen capture. You can record or screenshot the app until you restart Authme.</h4>
 								<div class="flex justify-center items-center w-72 h-[68px] bg-white mx-auto rounded-full">
@@ -323,7 +323,7 @@
 							<br />
 							<hr />
 							<h3>Blur codes</h3>
-							<h4>Blur the saved codes. You can still copy it or hover over it to reveal.</h4>
+							<h4>Blur the saved codes. You can still copy the codes or hover over the codes to show them.</h4>
 							<div class="flex justify-center items-center w-72 h-[68px] bg-white mx-auto rounded-full">
 								<a href="#" onclick="blurCodes()">
 									<div class="pointer-events-none relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
@@ -364,16 +364,8 @@
 							<h4>
 								You can modify the shortcuts here, read the documentation for more information.
 								<br />
-								Shortcuts not work on this page, go back to the settings tab to reactivate them!
+								Shortcuts not work on this tab, go to any other settings tab to reactivate them!
 							</h4>
-							<button class="buttoni" onclick="shortcutsLink()">
-								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
-								</svg>
-								Documentation
-							</button>
-							<br />
-							<br />
 							<br />
 							<div class="flex flex-col md:w-4/5 lg:w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
 								<div class="flex justify-center items-center">
@@ -788,16 +780,8 @@
 							<h4>
 								You can modify the global shortcuts here, read the documentation for more information.
 								<br />
-								Shortcuts not work on this page, go back to the settings tab to reactivate them!
+								Shortcuts not work on this tab, go to any other settings tab to reactivate them!
 							</h4>
-							<button class="buttoni" onclick="globalShortcutsLink()">
-								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
-								</svg>
-								Documentation
-							</button>
-							<br />
-							<br />
 							<br />
 							<div class="flex flex-col md:w-4/5 lg:w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
 								<div class="flex justify-center items-center">
@@ -887,16 +871,8 @@
 							<h4>
 								You can create a shortcut for your most used codes to copy quickly.
 								<br />
-								Shortcuts not work on this page, go back to the settings tab to reactivate them!
+								Shortcuts not work on this tab, go to any other settings tab to reactivate them!
 							</h4>
-							<button class="buttoni" onclick="quickCopyShortcutsLink()">
-								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
-								</svg>
-								Read docs
-							</button>
-							<br />
-							<br />
 							<br />
 							<div class="quick"></div>
 						</div>
